--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -12,7 +12,31 @@
       <a href="./index.html">Go to home</a>
       <h1>Welcome to page 2</h1>
     </section>
-    
-<script type="module" src="./js/1-time.js"></script>
+
+   <div class="input-container">
+    <input class="input-timer" type="text" id="datetime-picker" />
+    <button class="js-btn" type="button" data-start >Start</button>
+   </div>
+
+    <div class="timer">
+      <div class="field">
+        <span class="value" data-days>00</span>
+        <span class="label">Days</span>
+      </div>
+      <div class="field">
+        <span class="value" data-hours>00</span>
+        <span class="label">Hours</span>
+      </div>
+      <div class="field">
+        <span class="value" data-minutes>00</span>
+        <span class="label">Minutes</span>
+      </div>
+      <div class="field">
+        <span class="value" data-seconds>00</span>
+        <span class="label">Seconds</span>
+      </div>
+    </div>
+
+    <script type="module" src="./js/1-time.js"></script>
   </body>
 </html>
