--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -37,6 +37,6 @@
       </div>
     </div>
 
-    <script type="module" src="./js/1-time.js"></script>
+    <script type="module" src="./js/1-timer.js"></script>
   </body>
 </html>
